Fixed styling of StatusList, removed all margins and paddings, replaced with gap

--- a/frontend/src/components/ui/StatusList/StatusList.module.css
+++ b/frontend/src/components/ui/StatusList/StatusList.module.css
@@ -2,11 +2,13 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   li {
     display: flex;
     align-items: start;
-    margin-bottom: 1rem;
     gap: 0.5rem;
 
     aside {
@@ -21,14 +23,6 @@
 
     a:visited {
       color: var(--link-default);
-    }
-
-    &:global(.emphasis) {
-      font-weight: bold;
-    }
-
-    &:global(.padding) {
-      padding-top: 0.5rem;
     }
 
     &:global(.empty) {
@@ -59,5 +53,16 @@
 
 .title {
   font-weight: bold;
-  padding-bottom: 0.5rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
